# zero2prod

./: Cargo.toml  README.md  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: greet.rs  subscriptions.rs
tests/: health_check.rs
tests/apis/: health_check.rs  helpers.rs  subscription.rs
