[package]
name = "zero2prod"
version = "0.1.0"
authors = ["cosin <rescp17@gmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["http1"]}
tokio = { version = "1.25.0", features = ["full"] }
hyper = { version = "0.14.25" }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "migrate", "chrono"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = { version = "1.0.159", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24" }
tracing-bunyan-formatter = { version = "0.3.7" }
tracing-futures = { version = "0.2.5" }
tracing-log = { version = "0.1.3" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }

[dev-dependencies]
reqwest = { version = "0.11.15" }
